v.0.2 subiendo imgenes y apartados de contacto y demas

--- a/index.html
+++ b/index.html
@@ -19,16 +19,17 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">Raquel</a></h1>
+						<h1><a href="index.html">taller de bela</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
+											<li><a href="index.html">Menu</a></li>
+											<li><a href="view/quienesSomos.html">Quienes somos</a></li>
+											<li><a href="view/serviciosProductos.html">Servicios y productos</a></li>
+											<li><a href="view/contacto.html">Contacto</a></li>
 										</ul>
 									</div>
 								</li>
@@ -39,55 +40,55 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>Raquel</h2>
-							<p>Another fine responsive<br />
-							site template freebie<br />
-							crafted by <a href="http://html5up.net" style="color: red;">AQUI</a>.</p>
+							<h2>taller de bela</h2>
+							<p>Excelencia y Calidad</p>
 							<ul class="actions special">
-								<li><a href="#" class="button primary">Get Started</a></li>
+								<li><a href="view/contacto.html" class="button primary">Contactanos</a></li>
 							</ul>
 						</div>
-						<a href="#one" class="more scrolly">Learn More</a>
+						<a href="#one" class="more scrolly">Conoce</a>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style1 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Arcu aliquet vel lobortis ata nisl<br />
-								eget augue amet aliquet nisl cep donec</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Quienes somos</h2>
+								<p>Somos un emprendimiento familia que nos especializamos en la confección de lencería para el hogar, cortinas, almohadones, cojines, manteles, servilletas, juegos de cama, ajuares para bebés, etc. Apegados a los más altos estándares de calidad, cuidando la exclusividad de las piezas que confeccionamos y adecuándonos a tus necesidades.</p>
+								<ul class="actions stacked">
+									<li><a href="view/quienesSomos.html" class="button fit primary">Saber más</a></li>
+								</ul>
 							</header>
-							<ul class="icons major">
-								<li><span class="icon fa-diamond major style1"><span class="label">Lorem</span></span></li>
-								<li><span class="icon fa-heart-o major style2"><span class="label">Ipsum</span></span></li>
-								<li><span class="icon fa-code major style3"><span class="label">Dolor</span></span></li>
-							</ul>
 						</div>
 					</section>
 
 				<!-- Two -->
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/pic01.jpg" alt="" /></div><div class="content">
-								<h2>Magna primis lobortis<br />
-								sed ullamcorper</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+							<div class="image"><img src="images/box1.png" alt="" /></div><div class="content">
+								<h2>Tapas Fundas Para Bins - Tambores</h2>
+								<p>Este producto permite prescindir por completo del papel film o alusa para almacenar de forma hermética los productos. Puede ser elastizado con sistema de ajuste manual con cordón, depende del gusto y la necesidad de cada cliente.</p>
+								<ul class="actions stacked">
+									<li><a href="view/products/tapasFundas.html" class="button fit primary">Saber más</a></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>Tortor dolore feugiat<br />
-								elementum magna</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>almohadones</h2>
+								<p>Breve descripción del producto.</p>
+								<ul class="actions stacked">
+									<li><a href="#" class="button fit primary">Saber más</a></li>
+								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
 							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>Augue eleifend aliquet<br />
-								sed condimentum</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec hendrerit imperdiet. Mauris eleifend fringilla nullam aenean mi ligula.</p>
+								<h2>cojines</h2>
+								<p>Breve descripción del producto.</p>
+								<ul class="actions stacked">
+									<li><a href="#" class="button fit primary">Saber más</a></li>
+								</ul>
 							</div>
 						</section>
 					</section>
@@ -96,9 +97,8 @@
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
-								<h2>Accumsan mus tortor nunc aliquet</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum. Donec amet imperdiet eleifend<br />
-								fringilla tincidunt. Nullam dui leo Aenean mi ligula, rhoncus ullamcorper.</p>
+								<h2>Nuestro trabajo</h2>
+								<p>Nuestro trabajo se ha caracterizado por.... O se caracteriza por...</p>
 							</header>
 						</div>
 					</section>
@@ -107,12 +107,12 @@
 					<section id="cta" class="wrapper style4">
 						<div class="inner">
 							<header>
-								<h2>Arcue ut vel commodo</h2>
-								<p>Aliquam ut ex ut augue consectetur interdum endrerit imperdiet amet eleifend fringilla.</p>
+								<h2>Contactanos</h2>
+								<p>Pedidos, Asesoría, Información, Presupuesto. Si tienes cualquier duda, no dudes en contactarnos. <br /><br /> Esteremos complacidos en ayudarte.</p>
 							</header>
 							<ul class="actions stacked">
-								<li><a href="#" class="button fit primary">Get Started</a></li>
-								<li><a href="#" class="button fit">Learn More</a></li>
+								<li><a href="view/contacto.html" class="button fit primary">Contactanos</a></li>
+								<li><a href="view/quienesSomos.html" class="button fit">Quienes Somos</a></li>
 							</ul>
 						</div>
 					</section>
@@ -124,9 +124,9 @@
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
 							<li><a href="#" class="icon fa-instagram"><span class="label">Instagram</span></a></li>							<li><a href="#" class="icon fa-envelope-o"><span class="label">Email</span></a></li>
 						</ul>
-						<ul class="copyright">
-							<li>Julio Daal</li><li><a href="http://html5up.net">My GiHub</a></li>
-						</ul>
+						<!-- <ul class="copyright">
+							<li></li>
+						</ul> -->
 					</footer>
 
 			</div>
