--- a/generic.html
+++ b/generic.html
@@ -19,18 +19,18 @@
 
 				<!-- Header -->
 					<header id="header">
-						<h1><a href="index.html">Spectral</a></h1>
+						<h1><a href="index.html">taller de bela</a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Home</a></li>
-											<li><a href="generic.html">Generic</a></li>
-											<li><a href="elements.html">Elements</a></li>
-											<li><a href="#">Sign Up</a></li>
-											<li><a href="#">Log In</a></li>
+											<li><a href="index.html">Menu</a></li>
+											<li><a href="generic.html">Quienes somos</a></li>
+											<li><a href="elements.html">Servicion y productos</a></li>
+											<li><a href="elements.html">Nuestro trabajo</a></li>
+											<li><a href="elements.html">Contacto</a></li>
 										</ul>
 									</div>
 								</li>
@@ -41,7 +41,7 @@
 				<!-- Main -->
 					<article id="main">
 						<header>
-							<h2>Generic Page</h2>
+							<h2>generics</h2>
 							<p>Aliquam ut ex ut interdum donec amet imperdiet eleifend</p>
 						</header>
 						<section class="wrapper style5">
