--- a/index.html
+++ b/index.html
@@ -19,14 +19,14 @@
 
 				<!-- Header -->
 					<header id="header" class="alt">
-						<h1><a href="index.html">taller de bela</a></h1>
+						<h1><a href="index.html">Talleres <span>belas</span></a></h1>
 						<nav id="nav">
 							<ul>
 								<li class="special">
 									<a href="#menu" class="menuToggle"><span>Menu</span></a>
 									<div id="menu">
 										<ul>
-											<li><a href="index.html">Menu</a></li>
+											<li><a href="index.html">Inicio</a></li>
 											<li><a href="view/quienesSomos.html">Quienes somos</a></li>
 											<li><a href="view/serviciosProductos.html">Servicios y productos</a></li>
 											<li><a href="view/contacto.html">Contacto</a></li>
@@ -40,11 +40,13 @@
 				<!-- Banner -->
 					<section id="banner">
 						<div class="inner">
-							<h2>taller de bela</h2>
-							<p>Excelencia y Calidad</p>
-							<ul class="actions special">
+							<div class="containerLogo">
+									<img src="images/logoRaquel.png" width="200px" height="200px"alt="logotype-talleres Belas">
+							</div>							<h2>talleres</h2>
+							<p>Belas</p>
+							<!-- <ul class="actions special">
 								<li><a href="view/contacto.html" class="button primary">Contactanos</a></li>
-							</ul>
+							</ul> -->
 						</div>
 						<a href="#one" class="more scrolly">Conoce</a>
 					</section>
@@ -63,9 +65,16 @@
 					</section>
 
 				<!-- Two -->
+				<section id="one" class="wrapper-special style4 special">
+						<div class="inner">
+							<header class="major">
+								<h2>Algunos de nuestros Productos y/o Servicios</h2>
+							</header>
+						</div>
+					</section>
 					<section id="two" class="wrapper alt style2">
 						<section class="spotlight">
-							<div class="image"><img src="images/box1.png" alt="" /></div><div class="content">
+							<div class="image"><img src="images/box1redux.png" alt="box" /></div><div class="content">
 								<h2>Tapas Fundas Para Bins - Tambores</h2>
 								<p>Este producto permite prescindir por completo del papel film o alusa para almacenar de forma hermética los productos. Puede ser elastizado con sistema de ajuste manual con cordón, depende del gusto y la necesidad de cada cliente.</p>
 								<ul class="actions stacked">
@@ -74,31 +83,31 @@
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic02.jpg" alt="" /></div><div class="content">
-								<h2>almohadones</h2>
-								<p>Breve descripción del producto.</p>
+							<div class="image"><img src="images/pillows.jpg" alt="" /></div><div class="content">
+								<h2>conjines y almohadones</h2>
+								<p>Descripción del producto.</p>
 								<ul class="actions stacked">
-									<li><a href="#" class="button fit primary">Saber más</a></li>
+									<li><a href="view/products/cojinesYAlmohadones.html" class="button fit primary">Saber más</a></li>
 								</ul>
 							</div>
 						</section>
 						<section class="spotlight">
-							<div class="image"><img src="images/pic03.jpg" alt="" /></div><div class="content">
-								<h2>cojines</h2>
-								<p>Breve descripción del producto.</p>
+							<div class="image"><img src="images/bed.jpg" alt="cama" /></div><div class="content">
+								<h2>juegos de cama</h2>
+								<p>Descripción del producto.</p>
 								<ul class="actions stacked">
-									<li><a href="#" class="button fit primary">Saber más</a></li>
+									<li><a href="view/products/juegoDeCamas.html" class="button fit primary">Saber más</a></li>
 								</ul>
 							</div>
 						</section>
 					</section>
 
-				<!-- Three -->
+				<!-- Nuestro Trabajo -->
 					<section id="three" class="wrapper style3 special">
 						<div class="inner">
 							<header class="major">
 								<h2>Nuestro trabajo</h2>
-								<p>Nuestro trabajo se ha caracterizado por.... O se caracteriza por...</p>
+								<p>Nos caracterizamos por proporcionar un servicio de calidad, cumpliendo así con los más altos estándares de exigencia, ya sea en el acabado de nuestros productos y/o servicios, el cumplimiento de nuestros tiempos de entrega o en atención hacia nuestros clientes. Debido a que en talleres Belas trabajamos por tu satisfacción.</p>
 							</header>
 						</div>
 					</section>
